syntax = "proto3";

package pb;

option go_package = "termium/src/pb";

service BrowserControl {
  rpc OpenTab (Empty) returns (Message) {}
  rpc SetViewport (ViewportSize) returns (Message) {}
  rpc ClickMouse (Coordinate) returns (Message) {}
  rpc SendKeyboardInput (Text) returns (Message) {}
  rpc NavigateToUrl (Url) returns (Message) {}
  rpc TakeScreenshot (Empty) returns (Screenshot) {}
}

message Empty {}

message Message {
  string text = 1;
}

message ViewportSize {
  int32 width = 1;
  int32 height = 2;
}

message Coordinate {
  int32 x = 1;
  int32 y = 2;
}

message Text {
  string content = 1;
}

message Url {
  string url = 1;
}

message Screenshot {
  bytes data = 1;
}
